--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div id="wrapper">
         <canvas id="canvas1"></canvas>
-        <img src="/Images/overlay.png" alt="overlay" id="overlay">
-        <img src="/Images/leaves_left.png" alt="leaves-left" id="leaves-left">
-        <img src="/Images/leaves_right.png" alt="leaves-right" id="leaves-right">
+        <img src="Images/overlay.png" alt="overlay" id="overlay">
+        <img src="Images/leaves_left.png" alt="leaves-left" id="leaves-left">
+        <img src="Images/leaves_right.png" alt="leaves-right" id="leaves-right">
+        
     </div>
-
+    <img src="Images/owlbear.png" alt="owlbear" id="owlbear">
     <script src="script.js"></script>
     
 </body>
