--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         
     </div>
     <img src="Images/owlbear.png" alt="owlbear" id="owlbear">
+    <img src="Images/bush.png" alt="bush" id="bush">
+    <img src="Images/plant.png" alt="plant" id="plant">
+    <img src="Images/grass.png" alt="grass" id="grass">
+
     <script src="script.js"></script>
     
 </body>
